--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
         </select>
 		<!-- Popup panel for coordinates 
 	
-		<div id="infoPopupPanel" style="position:absolute; display:none;"></div>-->
-			<div id="infoPopupPanel" style="display:none;"></div> 
+		<div id="infoPopupPanel" style="position:absolute; display:none;"></div>
+			<div id="infoPopupPanel" style="display:none;"></div> -->
     </footer>
 
     <!-- Side Panels 
