--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 
 
 	
-			<script src="all5m1_v3.js" defer> </script>
+			<script src="all5m1_v3_photo.js" defer> </script>
 			<script src="proposal_all7a.js"></script>	
 			<script src="table4.js" ></script>	
 			
