--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
 
 	
 			<script src="all5m1_v3_photo.js" defer> </script>
-			<script src="proposal_all7a.js"></script>	
+			<script src="proposal_all7a_dbtree.js"></script>	
 			<script src="table4.js" ></script>	
 			
 
