--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaflet Map with Dropdowns</title>
+    <title>UMW Watershed Management Plan</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 	    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -49,6 +49,18 @@
             background-color: #388e3c;
             padding: 10px;
         }
+	.top-bar {
+  background-color: #e8f5e9; /* Light green background */
+  color: #333;
+  font-size: 9px;
+  /*padding: 5px 10px;*/
+  display: flex;
+  /*justify-content: flex-end;*/ /* Align translate element to right */
+  align-items: center;
+  border-bottom: 1px solid #c8e6c9;
+  height: 1px;
+}
+    
         .map {
             flex: 1;
             position: relative;
@@ -181,12 +193,23 @@
 }
 
 		
-        #attributePanel {
-            top: 90px; /* Below the header */
-            right: 0; /* From the left edge */
-			width: 300px; 
-        }
-		
+
+		#attributePanel {
+    position: fixed;             /* Makes it float above the map */
+    top: 90px;                   /* Push down from the top (e.g., below header) */
+    right: 200px;                    /* Align to the right edge */
+    width: 200px;                /* Set width */
+    /*max-height: 80vh;            /* Prevent it from taking full screen height */
+    max-height: 300px;
+    overflow-y: auto;            /* Scroll if content is long */
+    background-color: white;     /* Background so it's readable */
+    border: 1px solid #ccc;      /* Optional: subtle border */
+    padding: 10px;               /* Padding inside the panel */
+    box-shadow: 0 2px 6px rgba(0,0,0,0.2); /* Drop shadow for visibility */
+    z-index: 1000;               /* Make sure it's on top of map elements */
+    display: none;               /* Initially hidden (until feature is clicked) */
+}
+
 
 		
         .tab {
@@ -247,6 +270,13 @@
             background-color: #4caf50;
             color: white;
         }
+
+#google_translate_element {
+  position: fixed;
+  top: 1px;
+  right: 1px;
+  z-index: 9999;
+}		
         #areaPieChart {
             width: 100%;
             height: 400px;
@@ -274,6 +304,10 @@
     background-color: #45a049;
 }		
 
+
+
+
+
 .button-container {
   display: block;
   position: absolute; /* Positioned within the right panel */
@@ -299,13 +333,48 @@
 			 height: 100%;
             }
         }
-		
+	@media (max-width: 768px) {
+  header, footer {
+    font-size: 10px;
+    padding: 8px;
+  }
+
+  .button, .show-all-btn {
+    padding: 8px;
+    font-size: 11px;
+  }
+
+  #sidePanel {
+    padding: 10px;
+  }
+}
+	
     </style>
+	
+	
 </head>
 <body>
+<div class="top-bar">
+  <div id="google_translate_element"></div>
+</div>
+<script type="text/javascript">
+
+ function googleTranslateElementInit() {
+  new google.translate.TranslateElement({
+    pageLanguage: 'en',         // original language
+    includedLanguages: 'si,ta,en', // Sinhala (si) and English (en) only
+    layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+  }, 'google_translate_element');
+} 
+</script>
+
+<script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
+
 
     <!-- Legend items will be dynamically added here -->
-</div>
+
     <!-- README Modal -->
     <div id="readme-modal" class="modal">
         <div class="modal-content">
@@ -372,6 +441,10 @@
 			<button id="attributeBtn" class="button" onclick="handleButtonClick('attributeBtn', 'attributePanel')">Attribute</button>
 			<button id="help-button" class="button">Help</button>
         </div>
+
+
+
+		
     </header>
 	
 
@@ -412,11 +485,12 @@
 
     <div id="infoPanel" class="panel">MWS Info Content <button class="hide-btn" onclick="hidePanel('infoPanel')">Close</button></div>
     <div id="climPanel" class="panel">Climate Layer Content <button class="hide-btn" onclick="hidePanel('climPanel')">Close</button></div>
-    <div id="attributePanel" class="panel">Climate Layer Content <button class="hide-btn" onclick="hidePanel('attributePanel')">Close</button></div>
+    <div id="attributePanel" class="panel">Attribute Layer Content <button class="hide-btn" onclick="hidePanel('attributePanel')">Close</button></div>
 	<div id="tablePanel" class="panel">Data Table <button class="hide-btn" onclick="hidePanel('tablePanel')">Close</button>		
 
 </div>	
     <div id="catalogPanel" class="panel">Data Catalog Content <button class="hide-btn" onclick="hidePanel('catalogPanel')">Close</button>
+
 
 
 	<table id="csvTable">
@@ -590,7 +664,7 @@ document.addEventListener("DOMContentLoaded", function () {
             // Add selected layer
             switch (selectedLayer) {
                 case 'osm':
-                    osmLayer.addTo(map);
+                    osmLayer.addTo(map);f
                     break;
                 case 'esri':
                     esriLayer.addTo(map);
@@ -669,6 +743,7 @@ document.addEventListener("DOMContentLoaded", function () {
             window.open("https://umw-dbms.github.io/MWSDataCatalog.html", "_blank");
         }
     </script>
-		
+
+	
 </body>
 </html>
